test(media-lab): keep executor compatible with Java 17